WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53537
Fix a couple loose ends from the back/forward tree encode/decode work
https://bugs.webkit.org/show_bug.cgi?id=53537
Summary
Fix a couple loose ends from the back/forward tree encode/decode work
Darin Adler
Reported
2011-02-01 14:59:35 PST
Fix a couple loose ends from the back/forward tree encode/decode work
Attachments
Patch
(2.20 KB, patch)
2011-02-01 15:01 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-02-01 15:01:12 PST
Created
attachment 80834
[details]
Patch
WebKit Commit Bot
Comment 2
2011-02-01 17:01:17 PST
Comment on
attachment 80834
[details]
Patch Clearing flags on attachment: 80834 Committed
r77336
: <
http://trac.webkit.org/changeset/77336
>
WebKit Commit Bot
Comment 3
2011-02-01 17:01:22 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug