Source/WebCore/history/HistoryItem.h
@@ -234,7 +234,6 @@ private:
     HistoryItem* findTargetItem();
 
     void encodeBackForwardTreeNode(Encoder&) const;
-    static PassRefPtr<HistoryItem> decodeBackForwardTreeNode(const String& urlString, const String& title, const String& originalURLString, Decoder&);
 
     /* When adding new member variables to this class, please notify the Qt team.
      * qt/HistoryItemQt.cpp contains code to serialize history items.
